<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wifi Chat</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="wellcome">Wellcome to our Chat</string>
    <string name="save_me">Remember me!</string>
    <string name="logIn">Log In</string>
    <string name="signIn">Sign In</string>
    <string name="login_hint">Type your login here</string>
    <string name="signmessege">Haven\'t account yet\? Create now\! It\'s free</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration">RegistrationActivity</string>

</resources>