<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".RegisterActivity" >

    <RelativeLayout
             
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
         >

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login" />

        <EditText
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login"
            android:layout_below="@+id/login"
            android:ems="10"
            android:hint="@string/login_hint"
            android:inputType="text" />

        <requestFocus />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_input"
            android:layout_below="@+id/login_input"
            android:layout_marginTop="15dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_below="@+id/password"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/wellcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/wellcome" />

        <CheckBox
            android:id="@+id/save_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/password_input"
            android:layout_marginTop="5dp"
            android:text="@string/save_me" />

        <Button
            android:id="@+id/logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/save_me"
            android:text="@string/logIn" />

        <TextView
            android:id="@+id/sign_messege"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logIn"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/signmessege"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/sign_messege"
            android:layout_below="@+id/sign_messege"
            android:layout_marginTop="16dp"
            android:text="@string/signIn" />
    </RelativeLayout>
    </ScrollView>
